# nimbus

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  SETUP_GITHUB_PAGES.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: api.md  bucket-types.md  cli.md  getting-started.md  index.md  testing.md
src/nimbus/: __init__.py  bucket.py  cli.py  client.py  config.py  exceptions.py  paths.py  progress.py  storage.py
tests/: conftest.py  test_bucket.py  test_cli.py  test_config.py  test_paths.py  test_storage.py
tests/integration/: test_real_r2.py
