[build-system]
requires = ["setuptools==80.9.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbus"
version = "0.1.0"
description = "A small, project-agnostic Python package for storing files on S3-compatible object storage."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Shrenik M" }]
requires-python = ">=3.11"
keywords = ["s3", "r2", "object-storage", "cloudflare", "boto3"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving",
]
dependencies = [
    "boto3==1.43.9",
    "botocore==1.43.9",
    "attrs==26.1.0",
    "tqdm==4.67.3",
    "python-dotenv==1.2.2",
    "click==8.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-cov==7.1.0",
    "moto[s3]==5.2.1",
    "ruff==0.15.13",
]

[project.scripts]
nimbus = "nimbus.cli:main"

[project.urls]
Homepage = "https://github.com/shrenikm/nimbus"
Issues = "https://github.com/shrenikm/nimbus/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nimbus = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "B",
    "UP",
    "SIM",
    "C4",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests that hit a real R2 bucket (opt-in via NIMBUS_INTEGRATION_TESTS=1)",
]
